--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li><a href="#">Features</a></li>
           <li><a href="#">Articles</a></li>
           <li><a href="#">Pricing</a></li>
-          <li id='start'><a href="#">GET STARTED</a></li>
+          <li id='start'><a href="#">GET STARTE11D</a></li>
         </ul></div>
     </div>
     <div class='main__content'>
